syntax = 'proto3';

package alpha.protort.protocol;

message Packet {

    uint32 id = 1;
    enum component_kind
    {
        Generator = 0;
        Retranslator = 1;
        Terminator = 2;
    }
    component_kind component = 2;
    bytes payload = 3;
}
